CV Alignment Fix

--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -579,6 +579,10 @@ dl.cv {
     padding: 10px 0;
     width: 100%;
 
+    dt {
+      padding: 5px 0 0 0;
+    }
+
     dd {
         padding: 5px 0 0 0;
         color: #333;
